# fosit_ecommerce_store

./: .editorconfig  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml
.github/workflows/: tests.yml
cli/: async_typer.py  db.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
fosit_ecommerce_store/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
fosit_ecommerce_store/db/: config.py  utils.py
fosit_ecommerce_store/db/migrations/models/: 1_20230930183611_update.py  2_20231005000620_update.py
fosit_ecommerce_store/db/models/: __init__.py  inventory.py  sales.py
fosit_ecommerce_store/db/sql/: sample_data.sql
fosit_ecommerce_store/services/: __init__.py
fosit_ecommerce_store/tests/: __init__.py  test_echo.py  test_inventory.py
fosit_ecommerce_store/web/: __init__.py  application.py  lifetime.py
fosit_ecommerce_store/web/api/: __init__.py  router.py
fosit_ecommerce_store/web/api/docs/: __init__.py
fosit_ecommerce_store/web/api/echo/: __init__.py  views.py
fosit_ecommerce_store/web/api/inventory/: __init__.py  dao.py  schema.py  views.py
fosit_ecommerce_store/web/api/monitoring/: __init__.py
fosit_ecommerce_store/web/api/sales/: __init__.py  dao.py  schema.py  views.py
